# galamsey-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  ingest-concessions.yml  ingest-gfw-alerts.yml
apps/api/: .dockerignore  Dockerfile  db.py  dev.py  geo.py  main.py  pyproject.toml  schemas.py
apps/api/routers/: alerts.py
apps/api/tests/: test_alerts.py
apps/bot/: main.py  pyproject.toml
apps/web/: eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/assets/css/: main.css
apps/web/components/dashboard/: DetailPanel.vue  MapLegend.vue  MethodologyAlerts.vue  RegionSparklines.vue  TheRail.vue
apps/web/composables/: useAlertsLayer.ts  useApi.ts  useMap.ts  useSyntheticData.ts  useTheme.ts  useTimeRange.ts  useViewport.ts
apps/web/pages/: index.vue
apps/web/types/: dashboard.ts
docs/methodology/: README.md
infra/cloudrun/martin/: Dockerfile  README.md  config.yaml
infra/pmtiles/: Dockerfile  README.md  build.sh
infra/supabase/migrations/: 0001_init_postgis.sql  0002_boundaries.sql  0003_alerts_gfw.sql  0004_alerts_gfw_source_integrated.sql  0005_lock_admin_functions.sql  README.md
infra/supabase/seed/boundaries/: README.md  seed.sh
infra/supabase/tests/: 0001_init_postgis_test.sql  0002_boundaries_test.sql  0003_alerts_gfw_test.sql
pipelines/concessions/: README.md  pyproject.toml  scrape.py
pipelines/gfw_alerts/: README.md  ingest.py  pyproject.toml
