[project]
name = "galamsey-concessions-scraper"
version = "0.1.0"
description = "Weekly scraper for the Minerals Commission concessions cadastre"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.0",
    "structlog>=24.0.0",
    "shapely>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
